--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,12 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=CarSharing;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
-  }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
