--- a/UnitTests/Car_Sharing_Tests.csproj
+++ b/UnitTests/Car_Sharing_Tests.csproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Car_Sharing\Car_Sharing.csproj" />
+    <ProjectReference Include="..\Car_Sharing.csproj" />
   </ItemGroup>
+
 
 </Project>
